--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,59 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
+
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/color"
+    android:background="@drawable/blur"
     android:orientation="vertical"
     >
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginTop="100dp"
+        android:textColor="#ddd"
+        android:textAlignment="center"
+        android:textSize="30dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginLeft="70dp"
+        android:background="@drawable/hotel"
+        android:textStyle="bold|italic"      />
  <EditText
      android:layout_width="fill_parent"
      android:layout_height="50dp"
      android:textColor="#145"
-     android:layout_marginTop="150dp"
+     android:layout_marginTop="50dp"
      android:gravity="center"
     android:hint="Email ID"
      android:textSize="20dp"
      android:padding="10dp"
-     android:textColorHint="#000"
-     android:background="@drawable/back"
-     android:layout_marginLeft="35dp"
-     android:layout_marginRight="35dp"
+     android:textColorHint="#fff"
+     android:layout_marginLeft="30dp"
+     android:singleLine="false"
+     android:layout_marginRight="30dp"
+     android:textColorHighlight="#000"
+     android:backgroundTintMode="multiply"
      />
 
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="50dp"
-        android:textColor="#fff"
-        android:layout_marginTop="5dp"
+        android:textColor="#145"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:hint="Password"
         android:textSize="20dp"
         android:padding="10dp"
-        android:textColorHint="#000"
-        android:background="@drawable/back"
-
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
+        android:textColorHint="#fff"
+        android:layout_marginLeft="30dp"
+        android:singleLine="true"
+        android:layout_marginRight="30dp"
+        android:backgroundTintMode="multiply"
         />
+
     <Button
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="150dp"
-        android:layout_marginRight="35dp"
         android:text="LOGIN"
-        android:textSize="20dp"
-        android:background="@drawable/back"
-        />
-      <TextView
+        android:layout_width="411dp"
+            android:textSize="30dp"
+            android:layout_height="70dp"
+        android:layout_gravity="center"
 
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-
+        android:id="@+id/button"
         />
+
 
 </LinearLayout>  
