--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/blur"
     android:orientation="vertical"
-    >
+    android:weightSum="1">
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginTop="100dp"
-        android:textColor="#ddd"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="70dp"
         android:textAlignment="center"
         android:textSize="30dp"
-        android:layout_marginRight="70dp"
-        android:layout_marginLeft="70dp"
-        android:background="@drawable/hotel"
-        android:textStyle="bold|italic"      />
+        android:layout_gravity="center"
+        android:background="@drawable/hl"
+        android:textStyle="bold|italic"
+        />
  <EditText
      android:layout_width="fill_parent"
      android:layout_height="50dp"
      android:textColor="#145"
-     android:layout_marginTop="50dp"
+     android:layout_marginTop="30dp"
      android:gravity="center"
     android:hint="Email ID"
      android:textSize="20dp"
@@ -36,6 +31,7 @@
      android:layout_marginRight="30dp"
      android:textColorHighlight="#000"
      android:backgroundTintMode="multiply"
+     android:background="@drawable/shape"
      />
 
     <EditText
@@ -52,17 +48,22 @@
         android:singleLine="true"
         android:layout_marginRight="30dp"
         android:backgroundTintMode="multiply"
+        android:background="@drawable/shape"
+
         />
 
     <Button
         android:text="LOGIN"
-        android:layout_width="411dp"
+        android:layout_width="191dp"
             android:textSize="30dp"
-            android:layout_height="70dp"
+        android:textColor="#fff"
+            android:layout_height="50dp"
         android:layout_gravity="center"
-
-        android:id="@+id/button"
-        />
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/shape"
+        android:id="@+id/button" />
 
 
 </LinearLayout>  
