--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,18 +9,18 @@
     <TextView
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         android:textAlignment="center"
-        android:textSize="30dp"
+        android:textSize="40dp"
         android:layout_gravity="center"
-        android:background="@drawable/hl"
+        android:background="@drawable/ho"
         android:textStyle="bold|italic"
         />
  <EditText
      android:layout_width="fill_parent"
      android:layout_height="50dp"
      android:textColor="#145"
-     android:layout_marginTop="30dp"
+     android:layout_marginTop="40dp"
      android:gravity="center"
     android:hint="Email ID"
      android:textSize="20dp"
